--- a/src/_layouts/frontpage.html
+++ b/src/_layouts/frontpage.html
@@ -2,14 +2,17 @@
 ---
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Satellitt i Norge - Hjem</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
-		{{ content }}
-	</body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Satellitt i Norge - Hjem</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/main.css" />
+</head>
+
+<body>
+	{{ content }}
+</body>
+
 </html>
