--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Satellitt i Norge - {{ page.title }}</title>
+	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
 </head>
 
 <body>
