deploy: 16dab592aafcb4a82b630f676e7fdb55d1e8959f

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,4 @@
-html { height: 100%; }
-
-body { color: white; background-color: #fadeba; margin: 0; padding: 0; font-family: 'Noto Sans', sans-serif; height: 100%; }
+body { color: white; background-color: #fadeba; }
 
 .header { height: 80%; display: flex; flex-direction: column; justify-content: center; align-self: center; }
 
