--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -7,17 +7,21 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 200px;
-  background-color: #babefa;
   position: fixed;
   z-index: 1;
   top: 50px;
   left: 0;
   bottom: 0;
+  padding-top: 20px;
+  background-color: white;
+  box-shadow: grey 0 5px 5px;
 }
 
 .sidebar-item {
   padding: 0.5em 1em;
   width: calc(100% - 2em);
+  text-decoration: none;
+  color: black;
 }
 
 .sidebar-item.sub {
@@ -26,11 +30,14 @@
 }
 
 .sidebar-item:hover {
-  background-color: #caceff;
+  background-color: #eee;
 }
 
 .content-wrapper {
-  margin-left: 200px;
+  position: absolute;
+  top: 50px;
+  left: 200px;
+  right: 0;
   padding: 20px;
 }
 
@@ -40,4 +47,15 @@
   border: 1px solid #555;
   border-radius: 5px;
   padding: 0 20px;
+}
+
+.tempheader {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: white;
+  box-shadow: grey 5px 0 5px;
 }
