--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -41,12 +41,17 @@
   padding: 20px;
 }
 
+.guide-body {
+  background-color: #fafafa;
+}
+
 .page-wrapper {
   max-width: 800px;
   margin: 0 auto;
   border: 1px solid #555;
   border-radius: 5px;
   padding: 0 20px;
+  background-color: white;
 }
 
 .tempheader {
