deploy: 4927bf6ddc9b5f024d1b5d3604dda4d04c410e11

--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -8,7 +8,9 @@
 
 .content-wrapper { position: absolute; top: 50px; left: 200px; right: 0; padding: 20px; }
 
-.page-wrapper { max-width: 800px; margin: 0 auto; border: 1px solid #555; border-radius: 5px; padding: 0 20px; }
+.guide-body { background-color: #fafafa; }
+
+.page-wrapper { max-width: 800px; margin: 0 auto; border: 1px solid #555; border-radius: 5px; padding: 0 20px; background-color: white; }
 
 .tempheader { position: fixed; z-index: 2; top: 0; left: 0; right: 0; height: 50px; background-color: white; box-shadow: grey 5px 0 5px; }
 
