--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,7 +1,9 @@
 <nav>
   {% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
-      {{ item.name }}
+			<div class="nav-item">
+				{{ item.name }}
+			</div>
     </a>
   {% endfor %}
 </nav>
