--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 200px;
+  width: 250px;
   position: fixed;
   z-index: 1;
   top: 50px;
@@ -14,7 +14,7 @@
   bottom: 0;
   padding-top: 20px;
   background-color: white;
-  box-shadow: grey 0 5px 5px;
+  box-shadow: grey 0 0 5px;
 }
 
 .sidebar-item {
@@ -36,7 +36,7 @@
 .content-wrapper {
   position: absolute;
   top: 50px;
-  left: 200px;
+  left: 250px;
   right: 0;
   padding: 20px;
 }
@@ -52,15 +52,4 @@
   border-radius: 5px;
   padding: 0 20px;
   background-color: white;
-}
-
-.tempheader {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 50px;
-  background-color: white;
-  box-shadow: grey 5px 0 5px;
 }
