--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -11,7 +11,9 @@
 
 <body>
 	{% include navigation.html %}
-	{{ content }}
+	<div class="content-wrapper">
+		{{ content }}
+	</div>
 </body>
 
 </html>
