--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -1,11 +1,51 @@
 ---
 ---
+
 html {
-	height: 100%;
+  height: 100%;
 }
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Noto Sans', sans-serif;
-	height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans", sans-serif;
+  height: 100%;
+}
+
+.nav-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: white;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  box-shadow: grey 0 0 5px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+}
+
+.nav-item {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 0 2em;
+  overflow: hidden;
+  min-width: max-content;
+}
+
+.nav-item:hover {
+  background-color: lightgray;
+}
+
+.content-wrapper {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+  padding: 20px;
 }
