--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -6,7 +6,7 @@ body { margin: 0; padding: 0; font-family: "Noto Sans", sans-serif; height: 100%
 
 .nav-links { height: 100%; display: flex; flex-direction: row; }
 
-.nav-bar a { text-decoration: none; }
+.nav-bar a { text-decoration: none; color: black; }
 
 .nav-item { height: 100%; display: flex; justify-content: center; padding: 0 2em; overflow: hidden; min-width: max-content; }
 
