added empty footer and fixed routes

--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -33,21 +33,21 @@
   background-color: #eee;
 }
 
-.content-wrapper {
+.page-wrapper {
   position: absolute;
   top: 50px;
   left: 250px;
   right: 0;
-  padding: 20px;
+  padding: 0;
 }
 
 .guide-body {
   background-color: #fafafa;
 }
 
-.page-wrapper {
-  max-width: 800px;
-  margin: 0 auto;
+.content-wrapper {
+  max-width: 900px;
+  margin: 40px auto;
   border: 1px solid #555;
   border-radius: 5px;
   padding: 0 20px;
