--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -13,8 +13,11 @@
 
 <body>
 	{% include navigation.html %}
-	<div class="content-wrapper">
-		{{ content }}
+	<div class="page-wrapper">
+		<div class="content-wrapper">
+			{{ content }}
+		</div>
+		{% include footer.html %}
 	</div>
 </body>
 
