--- a/src/_layouts/guide.html
+++ b/src/_layouts/guide.html
@@ -29,10 +29,11 @@
         {% endfor %}
         {% endfor %}
     </nav>
-    <div class="content-wrapper">
-        <div class="page-wrapper">
+    <div class="page-wrapper">
+        <div class="content-wrapper">
             {{ content }}
         </div>
+        {% include footer.html %}
     </div>
 </body>
 
