--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -51,10 +51,20 @@ body {
   background-color: lightgray;
 }
 
-.content-wrapper {
+.page-wrapper {
   position: absolute;
   top: 50px;
   left: 0;
   right: 0;
+}
+
+.content-wrapper {
   padding: 20px;
+  min-height: calc(100vh - 340px);
+}
+
+.footer {
+  width: 100%;
+  height: 250px;
+  background-color: #1a2738;
 }
