--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -12,6 +12,10 @@ body { margin: 0; padding: 0; font-family: "Noto Sans", sans-serif; height: 100%
 
 .nav-item:hover { background-color: lightgray; }
 
-.content-wrapper { position: absolute; top: 50px; left: 0; right: 0; padding: 20px; }
+.page-wrapper { position: absolute; top: 50px; left: 0; right: 0; }
+
+.content-wrapper { padding: 20px; min-height: calc(100vh - 340px); }
+
+.footer { width: 100%; height: 250px; background-color: #1a2738; }
 
 /*# sourceMappingURL=default.css.map */
