fix page layout

--- a/src/_layouts/guide.html
+++ b/src/_layouts/guide.html
@@ -31,7 +31,9 @@
     </nav>
     <div class="page-wrapper">
         <div class="content-wrapper">
-            {{ content }}
+            <div class="page">
+                {{ content }}
+            </div>
         </div>
         {% include footer.html %}
     </div>
