--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -47,7 +47,10 @@
 
 .content-wrapper {
   max-width: 900px;
-  margin: 40px auto;
+  margin: 0 auto;
+}
+
+.page {
   border: 1px solid #555;
   border-radius: 5px;
   padding: 0 20px;
