deploy: 0c36f6676260d5091116be3c92a8d811a0dbf346

--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -10,6 +10,8 @@
 
 .guide-body { background-color: #fafafa; }
 
-.content-wrapper { max-width: 900px; margin: 40px auto; border: 1px solid #555; border-radius: 5px; padding: 0 20px; background-color: white; }
+.content-wrapper { max-width: 900px; margin: 0 auto; }
+
+.page { border: 1px solid #555; border-radius: 5px; padding: 0 20px; background-color: white; }
 
 /*# sourceMappingURL=guide.css.map */
