full page scroll

--- a/src/_layouts/frontpage.html
+++ b/src/_layouts/frontpage.html
@@ -8,12 +8,17 @@
 	<title>Satellitt i Norge - Hjem</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/eit-satellitt-i-norge/assets/css/fullpage.min.css" />
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/main.css" />
+	<script type="text/javascript" src="/eit-satellitt-i-norge/assets/scripts/fullpage.min.js"></script>
 </head>
 
 <body>
 	{{ content }}
+	<script>
+		new fullpage('#fullpage');
+	</script>
 </body>
 
 </html>
