--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -1,14 +1,11 @@
 ---
 ---
 
-html {
-  height: 100%;
-}
 body {
   margin: 0;
   padding: 0;
   font-family: "Noto Sans", sans-serif;
-  height: 100%;
+  background-color: #2a3373;
 }
 
 .nav-bar {
