--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,13 @@
-body { color: white; background-color: #fadeba; }
-
-.header { height: 80%; display: flex; flex-direction: column; justify-content: center; align-self: center; }
-
-.header h1 { text-align: center; }
+body { color: white; }
 
 .content-wrap { max-width: 960px; }
 
 .content-wrap h1 { text-align: center; }
 
-.introduction { background-color: #2a3373; min-height: 20em; display: flex; flex-direction: row; justify-content: center; }
+.introduction { min-height: 20em; display: flex; flex-direction: row; justify-content: center; }
 
 .nav-bar { position: inherit; box-shadow: none; }
+
+.full-page-wrapper { height: 100vh; }
 
 /*# sourceMappingURL=main.css.map */
