--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,4 +1,4 @@
-body { margin: 0; padding: 0; font-family: "Noto Sans", sans-serif; background-color: #2a3373; }
+body { margin: 0; padding: 0; font-family: "Noto Sans", sans-serif; background-color: #2a3373; color: white; }
 
 .nav-bar { display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 0 20px; background-color: white; position: fixed; z-index: 2; top: 0; left: 0; right: 0; height: 50px; box-shadow: grey 0 0 5px; }
 
