deploy: 014a52a6284fd23978c98fd6b0cbeb01d3c58e20

--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -1,3 +1,5 @@
+body { color: black; }
+
 .sidebar { display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; width: 250px; position: fixed; z-index: 1; top: 50px; left: 0; bottom: 0; padding-top: 20px; background-color: white; box-shadow: grey 0 0 5px; }
 
 .sidebar-item { padding: 0.5em 1em; width: calc(100% - 2em); text-decoration: none; color: black; }
