--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -5,8 +5,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Noto Sans", sans-serif;
-  background-color: #2a3373;
-  color: white;
+  background-color: lightgray;
+  color: black;
 }
 
 .nav-bar {
@@ -15,7 +15,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  background-color: white;
+  background-color: #1a2738;
+
   position: fixed;
   z-index: 2;
   top: 0;
@@ -33,7 +34,7 @@ body {
 
 .nav-bar a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .nav-item {
@@ -46,7 +47,7 @@ body {
 }
 
 .nav-item:hover {
-  background-color: lightgray;
+  background-color: darkgray;
 }
 
 .page-wrapper {
@@ -57,8 +58,12 @@ body {
 }
 
 .content-wrapper {
-  padding: 20px;
-  min-height: calc(100vh - 340px);
+  padding: 10px 20px;
+  min-height: calc(100vh - 360px);
+  max-width: 960px;
+  margin: 20px auto;
+  background-color: white;
+  box-shadow: grey 0 0 5px;
 }
 
 .footer {
