--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -11,6 +11,7 @@ body {
 
 table {
   width: 100%;
+  background-color: whitesmoke;
 }
 
 .nav-bar {
@@ -63,7 +64,7 @@ table {
 
 .content-wrapper {
   padding: 10px 20px 20px 20px;
-  min-height: calc(100vh - 360px);
+  min-height: calc(100vh - 370px);
   max-width: 960px;
   margin: 20px auto;
   background-color: white;
