--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,7 +2,7 @@
 ---
 
 body {
-  background-color: #2a3373;
+  background-color: black;
   color: white;
 }
 
@@ -24,8 +24,13 @@ body {
 .nav-bar {
   position: inherit;
   box-shadow: none;
+  width: calc(100% - 40px);
 }
 
 .full-page-wrapper {
   height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
