--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-body { background-color: #2a3373; color: white; }
+body { background-color: black; color: white; }
 
 .content-wrap { max-width: 960px; }
 
@@ -6,8 +6,8 @@ body { background-color: #2a3373; color: white; }
 
 .introduction { min-height: 20em; display: flex; flex-direction: row; justify-content: center; }
 
-.nav-bar { position: inherit; box-shadow: none; }
+.nav-bar { position: inherit; box-shadow: none; width: calc(100% - 40px); }
 
-.full-page-wrapper { height: 100vh; }
+.full-page-wrapper { height: 100vh; width: 100%; display: flex; flex-direction: column; align-items: center; }
 
 /*# sourceMappingURL=main.css.map */
