front page stuff

--- a/src/_layouts/frontpage.html
+++ b/src/_layouts/frontpage.html
@@ -17,7 +17,7 @@
 <body>
 	{{ content }}
 	<script>
-		new fullpage('#fullpage');
+		new fullpage('#fullpage', { lazyLoading: false });
 	</script>
 </body>
 
