--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,17 @@
 body { background-color: black; color: white; }
 
-.content-wrap { max-width: 960px; }
+.content-wrap { display: flex; flex-direction: column; text-align: center; padding-top: 50px; max-width: 960px; }
 
-.content-wrap h1 { text-align: center; }
-
-.introduction { min-height: 20em; display: flex; flex-direction: row; justify-content: center; }
+.content-wrap h1 { text-transform: uppercase; }
 
 .nav-bar { position: inherit; box-shadow: none; width: calc(100% - 40px); }
 
-.full-page-wrapper { height: 100vh; width: 100%; display: flex; flex-direction: column; align-items: center; }
+.full-page-wrapper { height: 100vh; width: 100%; display: flex; flex-direction: column; align-items: center; background-size: cover; }
+
+.front-1 { background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/eit-satellitt-i-norge/assets/images/nasa-yZygONrUBe8-unsplash.jpg); background-position: top; }
+
+.front-2 { background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/eit-satellitt-i-norge/assets/images/spacex-VBNb52J8Trk-unsplash.jpg); background-position: center; }
+
+.blue-button { background-color: #42a9ca; padding: 14px; margin: 20px; width: 100%; border-radius: 25px; color: white; text-transform: uppercase; text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
