--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,56 +2,73 @@
 ---
 
 body {
-  background-color: black;
-  color: white;
+	background-color: black;
+	color: white;
 }
 
 .content-wrap {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding-top: 50px;
-  h1 {
-    text-transform: uppercase;
-  }
+	display: flex;
+  flex: 1;
+	flex-direction: column;
+	text-align: center;
+	padding-top: 70px;
+	h1 {
+		text-transform: uppercase;
+		font-size: 40px;
+    margin: 40px 0;
+	}
 
-  max-width: 960px;
+	max-width: 960px;
 }
 
 .nav-bar {
-  position: inherit;
-  box-shadow: none;
-  width: calc(100% - 40px);
+	position: inherit;
+	box-shadow: none;
+	width: calc(100% - 40px);
 }
 
 .full-page-wrapper {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-size: cover;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-size: cover;
 }
 
 .front-1 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(/eit-satellitt-i-norge/assets/images/nasa-yZygONrUBe8-unsplash.jpg);
-  background-position: top;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url(/eit-satellitt-i-norge/assets/images/nasa-yZygONrUBe8-unsplash.jpg);
+	background-position: top;
 }
 
 .front-2 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(/eit-satellitt-i-norge/assets/images/spacex-VBNb52J8Trk-unsplash.jpg);
-  background-position: center;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url(/eit-satellitt-i-norge/assets/images/spacex-VBNb52J8Trk-unsplash.jpg);
+	background-position: center;
+}
+
+.front-3 {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url(/eit-satellitt-i-norge/assets/images/nasa-Q1p7bh3SHj8-unsplash.jpg);
+	background-position: center;
 }
 
 .blue-button {
-  background-color: #42a9ca;
-  padding: 14px;
-  margin: 20px;
-  width: 100%;
-  border-radius: 25px;
-  color: white;
-  text-transform: uppercase;
-  text-decoration: none;
+	background-color: #42a9ca;
+	padding: 14px;
+	margin: 20px;
+	width: calc(100% - 68px);
+	border-radius: 25px;
+	color: white;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+.blue-button:hover {
+  background-color: #48b8dd;
+}
+
+.blue-button:active {
+  background-color: #41a4c5;
 }
