--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,3 +1,25 @@
 <footer class="footer">
-
+    <div>
+        <p>TJENESTER</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Kontakt</a></p>
+        <p><a href="/eit-satellitt-i-norge/faq/">FAQ</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>INFORMASJON</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/"></a>Om oss</a></p>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Om prosjektet</a></p>
+        <p><a href="#">Informasjonskapsler</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>ANNET</p>
+    </div>
+    <div>
+        <p><a href="#">Varsler</a></p>
+    </div>
 </footer>
