--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -31,6 +31,11 @@ table {
   box-shadow: grey 0 0 5px;
 }
 
+.nav-space {
+  width: 100%;
+  height: 50px;
+}
+
 .nav-links {
   height: 100%;
   display: flex;
@@ -55,24 +60,31 @@ table {
   background-color: darkgray;
 }
 
-.page-wrapper {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  right: 0;
-}
-
 .content-wrapper {
-  padding: 10px 20px 20px 20px;
-  min-height: calc(100vh - 370px);
+  min-height: calc(100vh - 236px);
+  padding: 20px;
   max-width: 960px;
   margin: 20px auto;
   background-color: white;
   box-shadow: grey 0 0 5px;
+  flex: 1;
 }
 
 .footer {
-  width: 100%;
-  height: 200px;
   background-color: #1a2738;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.footer div {
+  padding: 10px;
+}
+
+.footer div * {
+  margin: 5px 0;
+  text-decoration: none;
+  color: white;
 }
