deploy: 719d1203a614acec798eeffcd612604d9757c945

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -4,6 +4,8 @@ table { width: 100%; background-color: whitesmoke; }
 
 .nav-bar { display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 0 20px; background-color: #1a2738; position: fixed; z-index: 2; top: 0; left: 0; right: 0; height: 50px; box-shadow: grey 0 0 5px; }
 
+.nav-space { width: 100%; height: 50px; }
+
 .nav-links { height: 100%; display: flex; flex-direction: row; }
 
 .nav-bar a { text-decoration: none; color: white; }
@@ -12,10 +14,12 @@ table { width: 100%; background-color: whitesmoke; }
 
 .nav-item:hover { background-color: darkgray; }
 
-.page-wrapper { position: absolute; top: 50px; left: 0; right: 0; }
+.content-wrapper { min-height: calc(100vh - 236px); padding: 20px; max-width: 960px; margin: 20px auto; background-color: white; box-shadow: grey 0 0 5px; flex: 1; }
 
-.content-wrapper { padding: 10px 20px 20px 20px; min-height: calc(100vh - 370px); max-width: 960px; margin: 20px auto; background-color: white; box-shadow: grey 0 0 5px; }
+.footer { background-color: #1a2738; display: flex; flex-direction: row; padding: 20px; align-items: flex-start; justify-content: center; }
 
-.footer { width: 100%; height: 200px; background-color: #1a2738; }
+.footer div { padding: 10px; }
+
+.footer div * { margin: 5px 0; text-decoration: none; color: white; }
 
 /*# sourceMappingURL=default.css.map */
