--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,4 +20,6 @@ body { background-color: black; color: white; }
 
 .blue-button:active { background-color: #41a4c5; }
 
+.footer { width: 100%; }
+
 /*# sourceMappingURL=main.css.map */
