--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -1,90 +1,141 @@
+--- 
 ---
----
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Noto Sans", sans-serif;
-  background-color: lightgray;
-  color: black;
+ body {
+	margin: 0;
+	padding: 0;
+	font-family: "Noto Sans", sans-serif;
+	background-color: lightgray;
+	color: black;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
+		url(/eit-satellitt-i-norge/assets/images/nasa-Q1p7bh3SHj8-unsplash.jpg);
+	background-position: center;
 }
 
 table {
-  width: 100%;
-  background-color: whitesmoke;
+	width: 100%;
+	background-color: whitesmoke;
 }
 
 .nav-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  background-color: #1a2738;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 20px;
+	background-color: #1a2738;
 
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 50px;
-  box-shadow: grey 0 0 5px;
+	position: fixed;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	box-shadow: grey 0 0 5px;
 }
 
 .nav-space {
-  width: 100%;
-  height: 50px;
+	width: 100%;
+	height: 50px;
 }
 
 .nav-links {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
 }
 
 .nav-bar a {
-  text-decoration: none;
-  color: white;
+	text-decoration: none;
+	color: white;
 }
 
 .nav-item {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 0 2em;
-  overflow: hidden;
-  min-width: max-content;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	padding: 0 2em;
+	overflow: hidden;
+	min-width: max-content;
 }
 
 .nav-item:hover {
-  background-color: darkgray;
+	background-color: darkgray;
 }
 
 .content-wrapper {
-  min-height: calc(100vh - 236px);
-  padding: 20px;
-  max-width: 960px;
-  margin: 20px auto;
-  background-color: white;
-  box-shadow: grey 0 0 5px;
-  flex: 1;
+	min-height: calc(100vh - 236px);
+	padding: 20px;
+	max-width: 960px;
+	margin: 20px auto;
+	background-color: white;
+	box-shadow: grey 0 0 5px;
+	flex: 1;
 }
 
 .footer {
-  background-color: #1a2738;
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  align-items: flex-start;
-  justify-content: center;
+	background-color: #1a2738;
+	display: flex;
+	flex-direction: row;
+	padding: 20px;
+	align-items: flex-start;
+	justify-content: center;
 }
 
 .footer div {
-  padding: 10px;
+	padding: 10px;
 }
 
 .footer div * {
-  margin: 5px 0;
-  text-decoration: none;
+	margin: 5px 0;
+	text-decoration: none;
+	color: white;
+}
+
+.card-container {
+  margin: 50px 0;
+  min-height: calc(100vh - 196px);
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
   color: white;
+  padding: 20px;
+  margin: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 250px;
+  height: 500px;
+}
+
+.card h2 {
+  text-transform: uppercase;
+}
+
+.blue-button {
+	background-color: #42a9ca;
+	padding: 14px;
+	margin: 20px;
+	width: calc(100% - 68px);
+	border-radius: 25px;
+	color: white;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+.blue-button:hover {
+  background-color: #48b8dd;
+}
+
+.blue-button:active {
+  background-color: #41a4c5;
+}
+
+.graphic {
+  margin: 20px;
 }
