--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,6 +1,9 @@
 <nav class="nav-bar">
   <a href="/eit-satellitt-i-norge/">
-    <img src="/eit-satellitt-i-norge/assets/images/satellite.svg" height="30">
+    <div style="display: flex; flex-direction: row; align-items: center;">
+    <img src="/eit-satellitt-i-norge/assets/images/satellite.svg" height="30" style="margin-right: 10px">
+    MySat
+  </div>
   </a>
   <div class="nav-links">
     {% for item in site.data.navigation %}
