--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -14,7 +14,7 @@ body { color: black; }
 
 .sidebar-item:hover::after { border-left: 1em solid #eee; }
 
-.content-wrapper { grid-area: center; justify-self: center; width: calc(100% - 40px); margin: 0; }
+.content-wrapper { grid-area: center; justify-self: center; width: calc(100% - 40px); min-height: calc(100vh - 236px); margin: 0; }
 
 .guide-body { display: grid; grid-template-columns: 250px auto 250px; grid-template-rows: auto; grid-template-areas: "sidebar center empty"; }
 
