--- a/src/_layouts/guide.html
+++ b/src/_layouts/guide.html
@@ -32,6 +32,7 @@
         <div class="content-wrapper">
             {{ content }}
         </div>
+        <div style="grid-area: empty; min-width: 250px;"></div>
     </div>
     {% include footer.html %}
 </body>
