--- a/src/assets/css/guide.scss
+++ b/src/assets/css/guide.scss
@@ -6,6 +6,7 @@ body {
 }
 
 .sidebar {
+  min-width: 250px;
   grid-area: sidebar;
   justify-self: stretch;
   align-self: flex-start;
@@ -62,7 +63,7 @@ body {
 
 .guide-body {
   display: grid;
-  grid-template-columns: 250px auto 250px;
+  grid-template-columns: auto minmax(0px, 960px) auto;
   grid-template-rows: auto;
   grid-template-areas: "sidebar center empty";
 }
