--- a/src/_layouts/guide.html
+++ b/src/_layouts/guide.html
@@ -21,6 +21,14 @@
 {% endif %}
 
 <body>
+    <div class="help">
+        <img src="/eit-satellitt-i-norge/assets/images/question.svg">
+        <div style="padding: 15px">
+            <span>Lurer du på noe?</span>
+            <br>
+            <span>Trykk <a href="/eit-satellitt-i-norge/faq/">her</a>.</span>
+        </div>
+    </div>
     {% include navigation.html %}
     <div class="guide-body">
         <nav class="sidebar">
