--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -8,7 +8,7 @@ h1 { text-transform: uppercase; }
 
 .faq-element { background-color: rgba(0, 0, 0, 0.8); color: white; display: flex; flex-direction: column; padding: 1em; margin: 1em; border-radius: 0.3125em; box-shadow: 0.3em 0.3em 0.3em rgba(0, 0, 0, 0.4); text-align: center; }
 
-.faq-element-header { text-align: left !important; display: table; }
+.faq-element-header { text-align: left !important; }
 
 .faq-element-header h1 { display: flex; align-items: center; text-align: center; }
 
