--- a/src/_layouts/guide.html
+++ b/src/_layouts/guide.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Guide - {{ page.title }}</title>
+    <title>{{ page.title }}</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
